PROJECT(AZPAZETATMX C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(HAIKU_BACKEND OFF CACHE BOOL "Build Haiku backend")
SET(QT_BACKEND OFF CACHE BOOL "Build QT backend")
SET(X11_BACKEND OFF CACHE BOOL "Build X11 backend")
SET(SDL_BACKEND OFF CACHE BOOL "Build SDL backend")
SET(GTK_BACKEND OFF CACHE BOOL "Build GTK backend")
SET(WX_BACKEND OFF CACHE BOOL "Build wxWidgets backend")

FIND_PACKAGE(OpenGL)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

IF(HAIKU_BACKEND)
	FILE(GLOB HAIKU_SRC ${CMAKE_CURRENT_SOURCE_DIR}/haiku "*.cpp")
	ADD_EXECUTABLE(AZPAZETATMX ${HAIKU_SRC})
	TARGET_LINK_LIBRARIES(AZPAZETATMX be tracker root ${AZPAZETATMX_GL} ${OPENGL_LIBRARIES})
ENDIF()

IF(QT_BACKEND)
	FIND_PACKAGE(Qt REQUIRED QtGui QtOpenGL)
	SET(QT_USE_QTOPENGL TRUE)
	include(${QT_USE_FILE})
	INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${QT_QTGUI_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${QT_QTOPENGL_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
	FILE(GLOB QT_SRC "${CMAKE_CURRENT_SOURCE_DIR}/qt/*.cpp")
	ADD_EXECUTABLE(AZPAZETATMX ${QT_SRC})
	TARGET_LINK_LIBRARIES(AZPAZETATMX AZPAZETATMX_GL ${OPENGL_LIBRARIES} Qt4::QtGui Qt4::QtOpenGL)
ENDIF()

FILE(GLOB COMMON_SRC "${PROJECT_SOURCE_DIR}/lib/*.cpp")

ADD_LIBRARY(AZPAZETATMX_GL STATIC ${COMMON_SRC})

